src/test/resources/amyc/parser/failing/MatchAsOperand.amy
object Match
  x match {
    case y => z
  } + 1
end Match
